License under CC BY 4.0

--- a/debut.tex
+++ b/debut.tex
@@ -7,6 +7,7 @@
 \usepackage{bbold}
 \usepackage{qrcode}
 \usepackage{caption}
+\usepackage{ccicons}
 
 \beamertemplatenavigationsymbolsempty
 
@@ -19,7 +20,7 @@
 \author{Penbu}
 
 \begin{document}
-  \maketitle
+  \frame{\titlepage\begin{center}This work is licensed under \href{http://creativecommons.org/licenses/by/4.0/}{CC BY 4.0} \ccby\end{center}}
 
   \begin{frame}
     \frametitle{Tell me about yourself}
